# cline-core

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml  sync_proto.py
.github/workflows/: ci.yml  release.yml
examples/: conversation_follower.py  example.py
src/cline_core/: __init__.py  cline_instance.py
src/cline_core/proto/cline/: account.proto  browser.proto  checkpoints.proto  commands.proto  common.proto  dictation.proto  file.proto  hooks.proto  mcp.proto  models.proto  oca_account.proto  slash.proto  state.proto  task.proto  ui.proto  web.proto
src/cline_core/proto/host/: diff.proto  env.proto  testing.proto  window.proto  workspace.proto
tests/: test_cline_instance.py
